<resources>
    <string name="app_name">Somoy TV</string>

    <string name="action_settings">Settings</string>
    <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>


    <string name="sample_imei">IMEI NUMBER</string>
    <string name="manufacturer_no">MANUFACTURER</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="duration_text">Duration</string>
    <string name="description_text">Description</string>
    <string name="category_text">Category</string>
    <string name="file_duration">File Duration</string>
    <string name="file_name">File Name</string>


    <string name="fragment_tab_vod_text">Comming Soon...</string>


    <string name="header_img_desc">Header Image Description</string>

    <string name="drawer_item_text">Drawer Item</string>

    <string name="first_fragment">Home</string>
    <string name="second_fragment">Content</string>
    <string name="third_fragment">VOD</string>
    <string name="fourth_fragment">LIVE</string>
    <string name="fifth_fragment">EPG</string>
    <string name="sample_fragment">Tab Sample</string>
    <string name="fragment_test">Test</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="contentDesc">Image Content Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


  <string name="hello_world"></string>


</resources>
